BUGFIX: use delimiter for all z-index variables

--- a/packages/neos-ui-inspector/src/SecondaryInspector/style.css
+++ b/packages/neos-ui-inspector/src/SecondaryInspector/style.css
@@ -29,5 +29,5 @@
     font-size: 18px;
     border-right-width: 0;
     border-top-width: 0;
-    z-index: var(--zIndexSecondaryInspectorClose);
+    z-index: var(--zIndex-SecondaryInspector-Close);
 }
