--- a/packages/neos-ui/src/Containers/RightSideBar/Inspector/style.css
+++ b/packages/neos-ui/src/Containers/RightSideBar/Inspector/style.css
@@ -19,7 +19,7 @@
     left: 0;
     width: calc(100% - var(--sidebarWidth));
     height: 100%;
-    z-index: var(--zIndexUnappliedChangesOverlay);
+    z-index: var(--zIndex-UnappliedChangesOverlay-Context);
     &,
     &::after {
         position: fixed;
